<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/text_dashboard"
android:layout_width="match_parent"
android:layout_height="match_parent"

tools:context="com.riyagayasen.easyaccordion.AccordionView">

    <LinearLayout
        android:id="@+id/accordion_linear_layout_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:textAlignment="center"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="0sp"
            android:textStyle=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/accordion_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/accordion_linear_compat_nested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="always"
                android:orientation="vertical"
                android:paddingBottom="90dp">

                <com.riyagayasen.easyaccordion.AccordionView
                    android:id="@+id/accordion_head"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:heading="Head"
                    app:isAnimated="true"
                    app:isExpanded="false"
                    app:isPartitioned="true">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_head_eyes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="18dp"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Eyes"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_head_eyes_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_head_eyes_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_head_neck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Neck"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_head_neck_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_head_neck_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_head_jaw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Jaw"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_head_jaw_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_head_jaw_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.riyagayasen.easyaccordion.AccordionView>

                <com.riyagayasen.easyaccordion.AccordionView
                    android:id="@+id/accordion_torso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:heading="Torso"
                    app:isAnimated="false"
                    app:isExpanded="false"
                    app:isPartitioned="true">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_torso_shoulders"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="18dp"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Shoulders"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_torso_shoulders_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_torso_shoulders_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_torso_lower_back"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Lower-Back"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_torso_lower_back_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_torso_lower_back_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_torso_hips"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Hips"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            android:outlineSpotShadowColor="@color/cardview_light_background"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_torso_hips_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_torso_hips_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.riyagayasen.easyaccordion.AccordionView>

                <com.riyagayasen.easyaccordion.AccordionView
                    android:id="@+id/accordion_arms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:heading="Arms"
                    app:isAnimated="false"
                    app:isExpanded="false"
                    app:isPartitioned="true">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_arms_wrists"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="18dp"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Wrists"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_arms_wrists_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_arms_wrists_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_arms_forearms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Forearms"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_arms_forearms_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_arms_forearms_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_arms_fingers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Fingers"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_arms_fingers_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_arms_fingers_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.riyagayasen.easyaccordion.AccordionView>

                <com.riyagayasen.easyaccordion.AccordionView
                    android:id="@+id/accordion_legs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:heading="Legs"
                    app:isAnimated="false"
                    app:isExpanded="false"
                    app:isPartitioned="true">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_legs_knees"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="18dp"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Knees"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_legs_knees_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_legs_knees_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_legs_ankles_calves"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Ankles-Calves"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_legs_ankles_calves_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_legs_ankles_calves_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>

                        <com.riyagayasen.easyaccordion.AccordionView
                            android:id="@+id/accordion_legs_feet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="18dp"
                            android:visibility="visible"
                            app:heading="Feet"
                            app:isAnimated="false"
                            app:isExpanded="false"
                            app:isPartitioned="true">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/accordion_legs_feet_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/accordion_legs_feet_text" />

                        </com.riyagayasen.easyaccordion.AccordionView>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.riyagayasen.easyaccordion.AccordionView>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>


    </LinearLayout>

</RelativeLayout>
